# dir4

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dir4/: __init__.py  directory.py
tests/: call_test.py  ruff.toml
